--- a/style.css
+++ b/style.css
@@ -14,6 +14,19 @@
 .button{
 	color:white;
 }
+@media screen and (max-width:720px){
+	.button{
+		margin-left:5px;
+		margin-bottom:30px;
+		margin-top:50px;
+	}
+	h3{
+		font-size:70px;
+	}
+	.buttons{
+		margin-bottom:40px;
+	}
+}
 .neon h3 {
     margin: 1rem auto;
     animation: neon 1s ease infinite;
@@ -25,99 +38,19 @@
         color: #f5efcb;
     }
     50% {
-        text-shadow: 0 0 2px #fed128, 0 0 5px #fed128, 0 0 5px #800e0b, 0 0 5px #800e0b, 0 0 2px #800e0b, 4px 4px 2px #40340a;
+        text-shadow: 0 0 2px #fed128, 0 0 5px #fed128, 0 0 5px #fed128, 0 0 5px #fed128, 0 0 2px #fed128, 4px 4px 2px #fed128;
         color: #eda0d3;
     }
 }
 
   body {
-	background:url('https://4kwallpapers.com/images/wallpapers/outrun-neon-dark-background-purple-3840x2160-4523.jpg');
+	background:url('https://4kwallpapers.com/images/walls/thumbs_2t/4523.jpg');
 		background-size: cover;
 	background-attachment: fixed;
 	color: #071F30;
 	font-family: 'Dosis', sans-serif;
   }
-  nav {
-	width: 100%;
-	height: 80px;
-	display: flex;
-	justify-content: space-between;
-	padding: 35px 5%;
-  }
-  nav .logo{
-	font-size: 30px;
-	font-weight: 700;
-  }
-  nav ul{
-	display: flex;
-	list-style: none;
-  }
-  nav ul li{
-	padding: 8px 15px;
-	border-radius: 10px;
-	transition: 0.2s ease-in;
-  }
-  nav ul li a{
-	color: white;
-	font-size: 20px;
-	font-weight: 500;
-	text-decoration: none;
-  }
   
-  nav .menubtn{
-	font-size: 30px;
-	font-weight: bolder;
-	cursor: pointer;
-	display: none;
-  }
-   
-  /* responsive navbar css */
-  @media screen and (max-width: 600px) {
-	nav .menubtn{
-	  display: flex;
-	}
-	nav .navLinks{
-	  display: none;
-	}
-	.sideNav {
-	  display: block !important;
-	}
-  }
-   
-  .sideNav{
-	height: 100%;
-	position: fixed;
-	top: 0;
-	right: 0%;
-	background-color: #585c60;
-	overflow-x: hidden;
-	transition: 0.3s ease-in;
-	padding-top: 60px;
-	display: none;
-	font-family: 'Dosis', sans-serif;
-  }
-   
-  .sideNav a{
-	padding: 8px 8px 8px 40px;
-	display: block;
-	font-size: 25px;
-	font-weight:bolder;
-	color:#071F30 ;
-	transition: 0.3s;
-	
-  }
-  
-  .sideNav a:hover{
-	color: white;
-  }
-  .sideNav .closeBtn{
-	position: absolute;
-	top: 10px;
-	right: 25px;
-	font-size: 20px;
-	margin-left: 50px;
-  }
-   
   .row{
 	display: flex;
 	justify-content: space-between;
@@ -158,9 +91,7 @@
 	.column1 p{
 	  font-size: 70px;
 	}
-	.row {
-	  margin-top: 80px;
-	}
+	
   }
    
   @media screen and (max-width: 600px) {
