--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 }
 .neon h3 {
     margin: 1rem auto;
-    animation: neon 1s ease infinite;
+    animation: neon 2s ease infinite;
 }
 @keyframes neon {
     0%,
@@ -38,7 +38,7 @@
         color: #f5efcb;
     }
     50% {
-        text-shadow: 0 0 2px #fed128, 0 0 5px #fed128, 0 0 5px #fed128, 0 0 5px #fed128, 0 0 2px #fed128, 4px 4px 2px #fed128;
+        text-shadow: 0 0 2px #450239, 0 0 5px #440238, 0 0 5px #3e0233, 0 0 5px #540445, 0 0 2px #420337, 4px 4px 2px #3b0231;
         color: #eda0d3;
     }
 }
